NetKubernetesAngular/Kubernetes/app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    name: app
    type: netapi

spec:
  containers:
  - name: app-api
    image: netkubernetesangular:latest
    imagePullPolicy: Never
    resources:
      requests:
        memory: "64Mi"   # Minimum memory the container needs
        cpu: "250m"      # Minimum CPU the container needs
      limits:
        memory: "128Mi"  # Maximum memory the container can use
        cpu: "500m"      # Maximum CPU the container can use
    ports:
      - containerPort: 5000
