NetKubernetesAngular/Kubernetes/sqlserver-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deploy
  labels:
    name: mssql-deploy
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      name: mssql-pod
  template:
    metadata:
      name: mssql-pod
      labels:
        app: app
        name: mssql-pod
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server
        resources:
          requests:
            memory: "2Gi"   # Minimum memory required for SQL Server
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1"
        ports:
          - containerPort: 1433
