NetKubernetesAngular/Kubernetes/sqlserver-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mssql-pod
  namespace: app
  labels:
    app: app
    name: mssql-pod
spec:
  containers:
  - name: mssql
    image: mcr.microsoft.com/mssql/server
    ports:
      - containerPort: 1433
