NetKubernetesAngular/Kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
  labels:
    name: app-service
    app: app
spec:
  type: ClusterIP
  selector:
    name: app
    type: netapi
  ports:
  - port: 5000
    targetPort: 5000
